# wikilabs-ai-copilot

./: .build_state.json  .gitignore  BACKLOG.md  CHANGELOG.md  CITATION_ENGINE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENT_PIPELINE.md  EMBEDDING_PIPELINE.md  ENGINEERING_INTELLIGENCE.md  KNOWLEDGE_PACK_SPEC.md  KNOWLEDGE_PLATFORM.md  KNOWLEDGE_PROVIDER_SPEC.md  KNOWLEDGE_SDK_GUIDE.md  KNOWLEDGE_VALIDATION.md  LICENSE  METADATA_MODEL.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SKILL_ARCHITECTURE.md  TECHNOLOGY_RECOGNITION.md  VECTOR_STORAGE.md  WORKFLOW_ENGINE.md  check_errors.sh  fix_all.py  fix_errors.py
src-tauri/: CODE_SIGNING.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer/: custom.nsi
src-tauri/src/: accessibility.rs  api_server.rs  config.rs  dpi_awareness.rs  error_handling.rs  global_shortcuts.rs  guidance_panel.rs  knowledge_panel.rs  logging.rs  main.rs  onboarding.rs  security.rs  skill_management.rs  status.rs  taskbar.rs  theme.rs  windows_cleanup.rs
src-tauri/update/: latest.json
src/ai/: Cargo.toml
src/ai/src/: context.rs  context_manager.rs  conversation_manager.rs  lib.rs  persona.rs  prompt_manager.rs  provider.rs  response.rs  session_manager.rs  tests.rs  token_budget.rs  token_counter.rs
src/benchmark/: Cargo.toml
src/benchmark/src/: lib.rs
src/copilot/: Cargo.toml
src/copilot/src/: approval.rs  cards.rs  conversation.rs  decision.rs  engine.rs  explainability.rs  follow_up.rs  lib.rs  lifecycle.rs  memory.rs  modes.rs  policy.rs  priority.rs  proactive.rs  recommendation.rs
src/core/data_types/: Cargo.toml
src/core/data_types/src/: ai.rs  chat.rs  engineering_context.rs  intent.rs  knowledge.rs  lib.rs  skill.rs  technology.rs  timeline.rs  tool.rs  workspace.rs
src/core/persistence/: Cargo.toml
src/core/persistence/src/: db.rs  lib.rs  migrations.rs  repositories.rs  schema.rs
src/engineering_timeline/: Cargo.toml
src/engineering_timeline/src/: lib.rs
src/guidance/: Cargo.toml
src/guidance/guides/: CHANGELOG.md  COMMAND_GUIDANCE.md  CONTEXT_PROVIDER_SPEC.md  EVIDENCE_FRAMEWORK.md  GUIDANCE_ENGINE.md  GUIDANCE_FEEDBACK.md  MCP_CONTEXT_INTEGRATION.md  RECOMMENDATION_FRAMEWORK.md  SAFETY_MODEL.md  TROUBLESHOOTING_WORKFLOW.md
src/guidance/src/: command_recommendation.rs  context_providers.rs  decision_engine.rs  evidence_framework.rs  feedback_system.rs  lib.rs  recommendation_framework.rs  safety_framework.rs  timeline.rs  workflow_framework.rs
src/human_feedback/: Cargo.toml
src/human_feedback/src/: lib.rs
src/intent/: Cargo.toml
src/intent/src/: confidence.rs  correction.rs  engine.rs  lib.rs  model.rs
src/knowledge/: Cargo.toml
src/knowledge/src/: dedup.rs  doc.rs  embedding.rs  import.rs  lib.rs  quality.rs  search.rs  tests.rs
src/knowledge/src/association/: filter.rs  graph.rs  mod.rs  proximity.rs  topic.rs  workspace_store.rs
src/knowledge/src/citation/: crossref.rs  link.rs  manager.rs  mod.rs
src/knowledge/src/embedding/: batch.rs  incremental.rs  local.rs  mod.rs  provider.rs  version.rs
src/knowledge/src/embedding_pipeline/: batch.rs  incremental.rs  mod.rs  provider.rs
src/knowledge/src/metadata/: mod.rs  models.rs  schema.sql
src/knowledge/src/pack/: loader.rs  manifest.rs  metadata.rs  mod.rs  repository.rs
src/knowledge/src/performance/: background_indexer.rs  cache.rs  cancellation.rs  lazy_loader.rs  memory_limit.rs  mod.rs  progress.rs
src/knowledge/src/pipeline/: mod.rs  result.rs
src/knowledge/src/pipeline/steps/: chunk.rs  clean.rs  mod.rs  (+9 more)
src/knowledge/src/processing/: docx.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs  txt.rs  xml.rs  yaml.rs
src/knowledge/src/providers/: confluence.rs  docx.rs  filesystem.rs  git.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs  sharepoint.rs  txt.rs  xml.rs  yaml.rs
src/knowledge/src/retrieval/: chunker.rs  context.rs  hybrid.rs  mod.rs  search.rs
src/knowledge/src/sdk/: README.md  create_pack.rs  mod.rs  packager.rs  schema.rs  templates.rs  testing.rs  validate.rs
src/knowledge/src/storage/: deletion.rs  incremental.rs  index.rs  migration.rs  mod.rs  namespace.rs  store.rs  vector_store.rs  workspace.rs
src/knowledge/src/validate/: broken_refs.rs  dependencies.rs  documents.rs  duplicate_id.rs  embedding_compat.rs  manifest.rs  metadata.rs  mod.rs  report.rs  schema_version.rs  version_compat.rs
src/mcp/skill_manager/: Cargo.toml
src/mcp/skill_manager/src/: context_bus.rs  lib.rs  manager.rs  module.rs
src/observation/: Cargo.toml
src/observation/src/: app_monitor.rs  browser.rs  capture.rs  clipboard.rs  credential_filter.rs  engine.rs  event.rs  event_bus.rs  file_observer.rs  lib.rs  ocr.rs  privacy.rs  provider.rs  screen_capture.rs  shell.rs  terminal.rs  tests.rs  tier1.rs  tier2.rs  tier3.rs
src/recommendation_readiness/: Cargo.toml
src/recommendation_readiness/src/: lib.rs
src/security/: Cargo.toml
src/security/src/: audit.rs  classification.rs  credentials.rs  encryption.rs  injection_defense.rs  key_derivation.rs  keychain.rs  lib.rs  tests.rs
src/skill_activation/: Cargo.toml
src/skill_activation/src/: lib.rs
src/skill_discovery/: Cargo.toml
src/skill_discovery/src/: lib.rs
src/skill_runtime/: Cargo.toml
src/skill_runtime/src/: lib.rs
src/skill_sdk/: Cargo.toml  SKILL_DEVELOPMENT_GUIDE.md
src/skill_sdk/schemas/: best_practices.schema.json  commands.schema.json  detection_rules.schema.json  intents.schema.json  manifest.schema.json  technology.schema.json  workflows.schema.json
src/skill_sdk/src/: lib.rs
src/skill_sdk/templates/: best_practices.yaml.template  commands.yaml.template  detection_rules.yaml.template  intents.yaml.template  known_issues.yaml.template  manifest.yaml.template  technology.yaml.template  workflows.yaml.template
src/technology_recognition/: Cargo.toml
src/technology_recognition/src/: aggregator.rs  engine.rs  lib.rs  pipeline.rs
src/workflow_engine/: Cargo.toml
src/workflow_engine/src/: lib.rs
src/workspace/: Cargo.toml
src/workspace/src/: config.rs  context.rs  history.rs  knowledge.rs  lib.rs  manager.rs
(+494 files in other folders)
