[package]
name = "wikilabs-desktop"
version = "1.1.5"
description = "Wiki Labs AI Copilot — Desktop Application"
edition = "2021"
authors = ["Wiki Labs Team"]
license = "MIT"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }
chacha20poly1305 = "0.10"
regex = "1"
tracing-appender = "0.2"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"

# Existing workspace crates
wikilabs-ai = { path = "../src/ai" }
wikilabs-persistence = { path = "../src/core/persistence" }
wikilabs-data-types = { path = "../src/core/data_types" }
wikilabs-security = { path = "../src/security" }
wikilabs-workspace = { path = "../src/workspace" }
wikilabs-knowledge = { path = "../src/knowledge" }
wikilabs-benchmark = { path = "../src/benchmark" }
serde_yaml = "0.9"
once_cell = "1"
cfg-if = "1"
# Windows-specific dependencies (only built on Windows)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
