[package]
name = "wikilabs-ai"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }