[package]
name = "wikilabs-ai"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }