[package]
name = "wikilabs-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true