[package]
name = "wikilabs-observation"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }