[package]
name = "wikilabs-skill-runtime"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
wikilabs-data-types = { path = "../core/data_types" }
