[package]
name = "wikilabs-skill-sdk"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
wikilabs-data-types = { path = "../core/data_types" }